# HealthAndProductivityAssistant

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  log4cxx.xml  main.cpp
appController/: AppController.cpp  AppController.h  CMakeLists.txt
core/: AppSettings.cpp  AppSettings.h  CMakeLists.txt  ISoundManager.h  IThemeManager.h  InactivityDialog.cpp  InactivityDialog.h  InactivityWatcher.cpp  InactivityWatcher.h  MainWindow.cpp  MainWindow.h  SoundManager.cpp  SoundManager.h  ThemeManager.cpp  ThemeManager.h  TimerDialog.cpp  TimerDialog.h
resources/: Info.plist.in  resources.qrc  translations.qrc.in
resources/translations/: HealthAndProductivityAssistant_de.ts  HealthAndProductivityAssistant_de_DE.ts  HealthAndProductivityAssistant_en.ts  HealthAndProductivityAssistant_en_GB.ts
ui/: CMakeLists.txt  InactivityDialog.ui  MainWindow.ui  TimerDialog.ui
unitTests/: AppControllerTest.cpp  AppSettingsTest.cpp  CMakeLists.txt  InactivityWatcherTest.cpp  MainWindowTest.cpp  Mocks.cpp  Mocks.h  SoundManagerTest.cpp  ThemeManagerTest.cpp  TimerDialogTest.cpp  gmain.cpp
